--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" type="text/css" href="style.css"
 </head>
 <body>
-    <canvas></canvas>
+    <canvas></canvas> //Ao usar o canvas, lembrar que é uma estrura onde ela será sobreposta com as outras camadas.
     <script>
         const canvasE1 = document.querySelector("canvas"),
             canvasCtx = canvasE1.getContext("2d")
+
+        const lineWidth = 15
 
         function setup(){
             canvasE1.width = canvasCtx.width = window.innerWidth //definição da largura. no JS quando há repetitividade de campos como esses, podemos declarar uma variavel recebendo a outra que por sua vez recebe o valor definido
@@ -20,6 +22,16 @@
         function draw(){
             canvasCtx.fillStyle = "#286047" //cor para o campo.
             canvasCtx.fillRect(0,0,window.innerWidth,window.innerHeight) // Comando usado para definir uma área retangular. Servirá para criar os campos de ambos os lados no jogo
+
+
+            canvasCtx.fillStyle = "#ffffff"
+
+            const x = window.innerWidth / 2 - lineWidth / 2
+            const y = 0
+            const w = lineWidth
+            const h = window.innerHeight
+
+            canvasCtx.fillRect(x,y,w,h)
         }
 
         setup() //lembrar de declarar as funções para que entrem em vigor
