Refinando o projeto, Criando objeto Placar

--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
                  canvasCtx.fillRect(this.x,this.y,this.w,this.h)
             }
         }
+        
+        const score = {
+            human: 1,
+            computer: 2,
+
+            draw: function(){
+                canvasCtx.font = "bold 72px Arial"
+                canvasCtx.textAlign = "center"
+                canvasCtx.textBaseline = "top"
+                canvasCtx.fillStyle = "#01341D"
+                canvasCtx.fillText(this.human,field.w / 4,50)
+                canvasCtx.fillText(this.computer,field.w / 4 + field.w / 2,50)
+            }
+        }
 
         const ball = {
             x: 300,
@@ -81,15 +95,11 @@
             line.draw()
             leftPaddle.draw()
             rigthPaddle.draw()
+            score.draw()
             ball.draw()
 
             //desenhando o placar
-            canvasCtx.font = "bold 72px Arial"
-            canvasCtx.textAlign = "center"
-            canvasCtx.textBaseline = "top"
-            canvasCtx.fillStyle = "#33ffda"
-            canvasCtx.fillText("5",window.innerWidth / 4,50)
-            canvasCtx.fillText("2",window.innerWidth / 4 + window.innerWidth / 2,50)
+           
         }
 
         setup() //lembrar de declarar as funções para que entrem em vigor
