--- a/index.html
+++ b/index.html
@@ -83,14 +83,30 @@
         }
 
         const ball = {
-            x: 300,
-            y: 200,
+            x: 0, //saída inicial da bolinha
+            y: 0, // saída inical da bolinha
             r: 20,
-            speed: 4,
+            speed: 5,
+            directionX: 1,
+            directionY: 1,
+            _calcPosition: function(){ // função para rebater naas bordas do campo
+                if(
+                    (this.y - this.r < 0 && this.directionY < 0) || //rebater a bolinha na parte superior
+                    (this.y > field.h - this.r && this.directionY > 0) //reabater a bolinha na parte inferior
+                ){
+                    this._reverseY()
+                }
+            },
+            _reverseY: function(){ //funções para inverter a posição da bolinha
+                this.directionY *= -1
+            },
+            _reverseX: function(){
+                this.directionX *= -1
+            },
 
             _move: function(){
-                this.x += 1 * this.speed
-                this.y += 1
+                this.x += this.directionX * this.speed
+                this.y += this.directionY * this.speed
             },
 
             draw: function(){
@@ -102,6 +118,7 @@
             canvasCtx.fill()
 
             this._move()
+            this._calcPosition()
             }
         }
 
