--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ping-Pong</title>
-    <link rel="stylesheet" type="text/css" href="style.css"
-</head>
+    <link rel="stylesheet" type="text/css" href="style.css" </head>
+
 <body>
     <canvas></canvas> //Ao usar o canvas, lembrar que é uma estrura onde ela será sobreposta com as outras camadas.
     <script>
@@ -14,40 +15,40 @@
 
         const gapX = 10
 
-        const mouse = {x:0,y:0}
+        const mouse = { x: 0, y: 0 }
 
         const field = {
             w: window.innerWidth,
             h: window.innerHeight,
-            draw: function(){
+            draw: function () {
                 canvasCtx.fillStyle = "#286047" //cor para o campo.
-                canvasCtx.fillRect(0,0,this.w,this.h) // Comando usado para definir uma área retangular. Servirá para criar os campos de ambos os lados no jogo
+                canvasCtx.fillRect(0, 0, this.w, this.h) // Comando usado para definir uma área retangular. Servirá para criar os campos de ambos os lados no jogo
             }
         }
 
         const line = {
             w: 15,
             h: field.h,
-            draw: function(){
-              //Linha Central
-            canvasCtx.fillStyle = "#ffffff"
-            canvasCtx.fillRect(field.w/2 - this.w/2,0,this.w,this.h)
+            draw: function () {
+                //Linha Central
+                canvasCtx.fillStyle = "#ffffff"
+                canvasCtx.fillRect(field.w / 2 - this.w / 2, 0, this.w, this.h)
             }
         }
 
         const leftPaddle = {
-             //desenho da raquete esquerda
+            //desenho da raquete esquerda
             x: gapX,
             y: 0,
             w: line.w,
             h: 200,
-            _move: function(){
-                this.y = mouse.y - this.h/2 //animação da raquete esquerda, o que se dá depois do - é referente a um método para deixar o mouse no meio da raquete.
+            _move: function () {
+                this.y = mouse.y - this.h / 2 //animação da raquete esquerda, o que se dá depois do - é referente a um método para deixar o mouse no meio da raquete.
             },
-            draw: function(){
-            canvasCtx.fillRect(this.x,this.y,this.w,this.h)
+            draw: function () {
+                canvasCtx.fillRect(this.x, this.y, this.w, this.h)
 
-            this._move()
+                this._move()
             },
         }
 
@@ -56,35 +57,35 @@
             y: 100,
             w: line.w,
             h: 200,
-            _move: function(){
+            _move: function () {
                 this.y = ball.y // animando a raquete direita em função da bolinha. Maquina
             },
             //desenho daa raquete direita
-            draw: function(){
-                 canvasCtx.fillRect(this.x,this.y,this.w,this.h)
+            draw: function () {
+                canvasCtx.fillRect(this.x, this.y, this.w, this.h)
 
-                 this._move()
+                this._move()
             }
         }
-        
+
         const score = {
             //placar
             human: 0,
             computer: 0,
-            increaseHuman: function(){
+            increaseHuman: function () {
                 this.human++
             },
-            increaseComputer: function(){
+            increaseComputer: function () {
                 this.computer++
             },
 
-            draw: function(){
+            draw: function () {
                 canvasCtx.font = "bold 72px Arial"
                 canvasCtx.textAlign = "center"
                 canvasCtx.textBaseline = "top"
                 canvasCtx.fillStyle = "#01341D"
-                canvasCtx.fillText(this.human,field.w / 4,50)
-                canvasCtx.fillText(this.computer,field.w / 4 + field.w / 2,50)
+                canvasCtx.fillText(this.human, field.w / 4, 50)
+                canvasCtx.fillText(this.computer, field.w / 4 + field.w / 2, 50)
             }
         }
 
@@ -95,23 +96,23 @@
             speed: 5,
             directionX: 1,
             directionY: 1,
-            _calcPosition: function(){ // função para rebater naas bordas do campo e marcar pontos
+            _calcPosition: function () { // função para rebater naas bordas do campo e marcar pontos
 
-                if(this.x > field.w - this.r - gapX - rigthPaddle.w){
-                    if(this.y + this.r > rigthPaddle.y && 
-                    this.y - this.r < rigthPaddle.y + rigthPaddle.h){
+                if (this.x > field.w - this.r - gapX - rigthPaddle.w) {
+                    if (this.y + this.r > rigthPaddle.y &&
+                        this.y - this.r < rigthPaddle.y + rigthPaddle.h) {
                         //rebate a bola
                         this._reverseX()
-                    } else{
+                    } else {
                         //fazer um ponto
                         score.increaseHuman()
                         this._pointUp()
                     }
                 }
 
-                if(this.x < this.r + leftPaddle.w + gapX){
-                    if(this.y + this.r > leftPaddle.y && 
-                    this.y - this.r < leftPaddle.y + leftPaddle.h){
+                if (this.x < this.r + leftPaddle.w + gapX) {
+                    if (this.y + this.r > leftPaddle.y &&
+                        this.y - this.r < leftPaddle.y + leftPaddle.h) {
                         this._reverseX()
                     } else {
                         score.increaseComputer()
@@ -119,73 +120,80 @@
                     }
                 }
 
-                if(
+                if (
                     (this.y - this.r < 0 && this.directionY < 0) || //rebater a bolinha na parte superior
                     (this.y > field.h - this.r && this.directionY > 0) //reabater a bolinha na parte inferior
-                ){
+                ) {
                     this._reverseY()
                 }
             },
-            _reverseY: function(){ //funções para inverter a posição da bolinha
+            _reverseY: function () { //funções para inverter a posição da bolinha
                 this.directionY *= -1
             },
-            _reverseX: function(){
+            _reverseX: function () {
                 this.directionX *= -1
             },
 
-            _pointUp: function(){
+            _speedUp: function(){
+                this.speed += 2
+            },
+
+            _pointUp: function () {
+
+                this._speedUp()
+
                 this.x = field.w / 2
                 this.y = field.h / 2
             },
 
-            _move: function(){
+            _move: function () {
                 this.x += this.directionX * this.speed
                 this.y += this.directionY * this.speed
             },
 
-            draw: function(){
+            draw: function () {
 
-            canvasCtx.fillStyle = "#ffffff" // Embora a melhor forma seria inserir o tipo de cor em todos os objetos. foi deixado dessa forma para mostrar que, caso não seja incluído, será tomado a propriedade do ultimo style para os demais abaixo dele
+                canvasCtx.fillStyle = "#ffffff" // Embora a melhor forma seria inserir o tipo de cor em todos os objetos. foi deixado dessa forma para mostrar que, caso não seja incluído, será tomado a propriedade do ultimo style para os demais abaixo dele
                 //desenhando a Bolinha
-            canvasCtx.beginPath() //não há um comando fillarc, devido a isso deve ser estipulado um beginpath e um fill para finalizar o traçado do arco.
-            canvasCtx.arc(this.x,this.y,this.r,0,2*Math.PI,false)
-            canvasCtx.fill()
+                canvasCtx.beginPath() //não há um comando fillarc, devido a isso deve ser estipulado um beginpath e um fill para finalizar o traçado do arco.
+                canvasCtx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false)
+                canvasCtx.fill()
 
-            this._move()
-            this._calcPosition()
+                this._move()
+                this._calcPosition()
             }
         }
 
 
-        function setup(){
+        function setup() {
             canvasE1.width = canvasCtx.width = field.w //definição da largura. no JS quando há repetitividade de campos como esses, podemos declarar uma variavel recebendo a outra que por sua vez recebe o valor definido
-            canvasE1.height = canvasCtx.height = field.h   
+            canvasE1.height = canvasCtx.height = field.h
         }
 
-        function draw(){
+        function draw() {
             field.draw()
             line.draw()
             leftPaddle.draw()
             rigthPaddle.draw()
             score.draw()
-            ball.draw()  
+            ball.draw()
         }
 
         // Fórmula padrão para tornar a animação mais suave e não pular frames
-        window.animateFrame = (function(){
+        window.animateFrame = (function () {
             return (
                 window.requestAnimationFrame || //suavizar a animação no navegador padrão. O mesmo vale para cada um dos que estão abaixo.
                 window.webkitRequestAnimationFrame || // Chrome
                 window.mozRequestAnimationFrame || // Mozila
                 window.oRequestAnimationFrame || // Opera
                 window.msRequestAnimationFrame || // Explorer
-                function (callback){ //função para chamar o movimento da bolinha, após melhoria na animação
+                function (callback) { //função para chamar o movimento da bolinha, após melhoria na animação
                     return window.setTimeout(callback, 1000 / 60)
                 }
             )
         })()
 
-        function main (){
+        function main() {
             animateFrame(main)
             draw()
         }
@@ -193,11 +201,12 @@
         setup() //lembrar de declarar as funções para que entrem em vigor
         main()
 
-        canvasE1.addEventListener("mousemove", function(e){ //evento para receber a movimentação do mouse
+        canvasE1.addEventListener("mousemove", function (e) { //evento para receber a movimentação do mouse
             mouse.x = e.pageX
             mouse.y = e.pageY
         })
 
     </script>
 </body>
+
 </html>
