--- a/index.html
+++ b/index.html
@@ -57,9 +57,19 @@
             y: 100,
             w: line.w,
             h: 200,
+            speed: 4,
             _move: function () {
-                this.y = ball.y // animando a raquete direita em função da bolinha. Maquina
+                if (this.y + this.h / 2 < ball.y + ball.r) {// animando a raquete direita em função da bolinha. Maquina
+                    this.y += this.speed
+                } else{
+                    this.y -= this.speed
+                }
             },
+
+            speedUp: function(){
+                this.speed += 2
+            },
+
             //desenho daa raquete direita
             draw: function () {
                 canvasCtx.fillRect(this.x, this.y, this.w, this.h)
@@ -141,6 +151,7 @@
             _pointUp: function () {
 
                 this._speedUp()
+                rigthPaddle.speedUp()
 
                 this.x = field.w / 2
                 this.y = field.h / 2
